# RemoteCall

./: .gitignore  README.md
RemoteCall/RemoteContext/: RemoteContext.h
RemoteCall/tests/: CMakeLists.txt  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt  main.cpp
RemoteCall/tests/mtl/: binary_stream.hpp  context.hpp  function_traits.hpp  functors_queue.cpp  functors_queue.hpp  future.hpp  make_pipe.hpp  remote_acceptor.hpp  remote_endpoint.hpp  remote_endpoint_async.hpp  remote_endpoint_tcp.hpp  stream_caller.hpp  stream_caller_mapper.hpp  stream_caller_mapper_async.hpp  stream_caller_mapper_proxy.hpp  stream_channel.hpp  stream_channel_netLink.hpp
RemoteCall/tests/mtl/lockless/: slist.hpp
RemoteCall/tests/mtl/mappers/: stream_caller_mapper.hpp  stream_caller_mapper_channel_proxy.hpp  stream_caller_mapper_proxy.hpp
RemoteCall/tests/mtl/pointer/: remote_pointer.hpp
